=0.10 - Beta in body=
* Added support for translations
* All e-mails sent from in-program
* Added environment_variable attribute to location_shortcut tag so that shortcuts in other locations can be specified

=0.9.2 - Portable Evolution=
* Fixed a bug when restoring to a game in an Alt. Install Path
* Changed Steam EV to have priority over program files EV
* Change to remove old location handler when resetting the handler

=0.9.1 - Independent Evolution=
* Added client code for the new automatically generating update server

=0.9 - Beta in mind=
* Change Analyzer to disable entire interface while e-mailing
* Changed analyzer to e-mail masgausubmissions@gmail.com instead of my personal address
* Added startup check to monitor to exit the program if a detected monitor is already running.
* Settings are automatically shared between running programs
* Restore process overhauled, including ability to select specific files to restore
* Added the ability to mass-restore easily
* Entire interface re-written (But it still looks pretty much the same! Progress!)
* Monitor settings overhauled, right click menu much smaller and tidier
* Added the ability to do an automatic mass-restore
* Added ability to edit reports before sending/saving them
* Added a flashshare environemtn variable for flash games
* Changed the restore process to create a temp file (which is ignored by DropBox), and works on that file, then copies the temp file over the original file (or converts the old one to a revision copy if that setting is enabled).
* Added new modified_after attribute to the save, ignore and identifier tags.
* Stuff
* Little things
* Big things
* SUPPORT FOR DAIKATANA! BOOYAH!

=v.0.8 - Beta in spirit=
* Added a contribution counter to the about tab. So cool.
* Added the ability to sort the games list both ascending and descending
* Fixed detection of Playstation saves on memory sticks formatted as "FAT" (Fix contributed by duncans_pumpkin)