@@ -2,6 +2,8 @@
 * Added support for translations
 * All e-mails sent from in-program
 * Added environment_variable attribute to location_shortcut tag so that shortcuts in other locations can be specified
+* Added new append attribute to ps_code tag to allow dividing up collections that share the same ps code
+* Added new type attribute to ps_code tag to allow sorting playstation saves into types
 
 =0.9.2 - Portable Evolution=
 * Fixed a bug when restoring to a game in an Alt. Install Path
